test de menu reussie

--- a/.env
+++ b/.env
@@ -7,3 +7,17 @@ TWILIO_AUTH_TOKEN = 0ffccb2ec7134ce27ef32601723e7f6f
 TWILIO_PHONE_NUMBER = +15017250604
 
 MY_PHONE_NUMBER = +22892069969
+
+
+Oauth_Client_Id = 25078493025-1ep6h4076v1975qrr1kgqhufn17m9tp1.apps.googleusercontent.com
+
+Oauth_Secret_Key = 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
+
+BASE_URL=http://localhost:8080
+
+OAuth_URL_REDIRECTION = http://localhost:8080/auth/google/callback
+
+# OAuth_URL_REDIRECTION = https://resto.onrender.com/auth/google/callback
+
+# BASE_URL = https://resto.onrender.com
+
