CRUD des models

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ TWILIO_PHONE_NUMBER = +15017250604
 
 MY_PHONE_NUMBER = +22892069969
 
+JWT_TOKEN_KEY = ksQD5adHXZ-5SSJCupcHwBzDi6q5kfr5hdU7Eq5tMmo
 
 Oauth_Client_Id = 25078493025-1ep6h4076v1975qrr1kgqhufn17m9tp1.apps.googleusercontent.com
 
@@ -20,4 +21,3 @@ OAuth_URL_REDIRECTION = http://localhost:8080/auth/google/callback
 # OAuth_URL_REDIRECTION = https://resto.onrender.com/auth/google/callback
 
 # BASE_URL = https://resto.onrender.com
-
